Simplifty the openapi definition to remove indexable keys and host addresses for splits
